tests/typec-test/test_out/spec-with-funcs.txt
error: type mismatch
  --> spec-with-funcs\root.ctl:20:20
   |
20 | fn main -> uint => uint\new()
   |                    ^^^^^^^^^^ mismatch occurred here
   |
   = info: expected 'uint' but got '()'

info: tir repr of functions:
 fn [Glue, ] glue_up(var0: param1) -> 0\Glued[param1] return {
    Glue\use_on[param0, param1](^Glue\new[param0](), var0)
}

fn [] new() -> uint return 0

fn [] use_on(var0: ^uint, var1: param0) -> 0\Glued[param0] return 0\Glued[param0]\{var1}

fn [] new() -> () return {
}



